Added creation test
