# docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/skill/createSkill": {
+        "/createSkill": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -49,6 +49,54 @@
                     },
                     "400": {
                         "description": "We require all fields",
+                        "schema": {
+                            "$ref": "#/definitions/api.ServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/getskillbyid/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "skills"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/db.Skill"
+                        }
+                    },
+                    "400": {
+                        "description": "Something is wrong",
+                        "schema": {
+                            "$ref": "#/definitions/api.ServerError"
+                        }
+                    },
+                    "404": {
+                        "description": "Something is wrong",
+                        "schema": {
+                            "$ref": "#/definitions/api.ServerError"
+                        }
+                    },
+                    "500": {
+                        "description": "Something is wrong",
                         "schema": {
                             "$ref": "#/definitions/api.ServerError"
                         }
